--- a/writeup.Rmd
+++ b/writeup.Rmd
@@ -144,7 +144,8 @@ To get a better sense of what we can expect the population to look like I have a
 
 # Question 2
 
-## a
+## a. Rewriting the model for the case where removal occurs before growth.
+
 $N_t = (N_{t-1} - c_{t-1}) + r_t * (N_{t-1} - c_{t-1}) * [1 - (N_{t-1} - c_{t-1})/K_t]$
 
 ```{r}
@@ -233,11 +234,11 @@ ggplot(data, aes(x = Year, y = Population, color = Model, shape = Model)) +
   scale_color_manual(values = c("blue", "red", "green", "orange")) +
   scale_shape_manual(values = c(19, 17, 16, 15)) 
 ```
-## b
+## b. Thinking biologically about modelling (r_t) as a function of t or t-1
 
 The amount of rainfall in the previous year may affect the growth of plants, thus providing more food resources for the population in the New Year. Therefore, it may be more reasonable to consider (r_t) as a function of rainfall (R_{t-1}) at time (t-1).\newline
 
-# c
+# c. Thinking biologically about modelling (K_t) as a function of t or t-1
 
 Carrying capacity is limited by environmental resources (such as food and water). It may be more realistic to consider (K_t) as a function of rainfall (R_{t-1}) at time (t-1). This means that the rainfall conditions of the previous year determine the environmental carrying capacity of the current year.
 
