--- a/writeup.Rmd
+++ b/writeup.Rmd
@@ -125,12 +125,15 @@ Firstly we simulate a single set of population dynamics, and can see an example 
 
 The solid blue line represents the true population and the observations are given by the dotted line.
 
-![Yearly Breakdown](plots/yearlybreakdown.png)
+```{r pressure, echo=FALSE, fig.cap="Population broken down by year", out.width = '100%'}
+knitr::include_graphics("plots/yearlybreakdown.png")
+```
 
 To get a better sense of what we can expect the population to look like I have also plotted the upper quartile, lower quartile and median of the yearly total population in 1000 simulations. The population still tends to die out, but I found myself impressed by the fact that in 25% of cases the population still had 30+ members afte 25 years. Also, it speaks to the nature of stochastic dynamics that both the true and observed populations have huge variability from one simulation to the next. 
 
-![Overall Quartiles](plots/ul_quartiles.png)
-
+```{r pressure, echo=FALSE, fig.cap="Total Population over 1,000 simulations", out.width = '100%'}
+knitr::include_graphics("plots/ul_quartiles.png")
+```
 # Question 2
 
 ## a. Rewriting the model for the case where removal occurs before growth.
